--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -14,7 +14,7 @@
                   [% "Ejemplares" | i18n %]
                 </a>
               </div>
-              <div id="ejemplares_[% id2 %]" class="accordion-body collapse">
+              <div id="ejemplares_[% id2 %]" class="accordion-body collapse in">
                 <div class="accordion-inner">
 					<div class="alert alert-info">
 					    <dl>
