--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
@@ -5,12 +5,9 @@ $(document).ready(function(){
     $('.popover_button').popover({delay: { show: 800, hide: 100 },});
 });
 </script>
-[% IF circularDesdeDetalleUsuario == 0 %]
-    [% INCLUDE 'partials/usuarios/detallePrestamos-noCirculation.inc' %]
-[% ELSE %]
-	
-		[% USE HTML %]
-		
+
+[% USE HTML %]
+[% IF prestamos_cant %]		
 		<fieldset> 
               <legend class="titulo_legend_resaltado">[% "Ejemplares Prestados" | i18n %]</legend>
                      [% IF prestamos_cant %]
@@ -115,21 +112,26 @@ $(document).ready(function(){
                     </tbody>  
                   
 			</table> 
-
-                      [% PERL %]
-                              print C4::AR::Filtros::action_set_button(    
-                                                                  title           => "[% 'Pr&eacute;stamos' | i18n %]",
-                                                                  button          => 'btn btn-primary',
-
-                                                                  actions         => [
-                                                                                      [% IF prestamos_cant %]{title => "Devolver", action=>'realizarAccion("DEVOLUCION","table_tablaPrestamos",generaDivDevolucion)',icon=>"icon-share-alt"}[% END %],
-                                                                                      [% IF algunoSeRenueva>0 && vencidos == 0 %]{title => "Renovar", action=>'realizarAccion("RENOVACION","table_tablaPrestamos",generaDivRenovacion)', icon=>"icon-repeat"}[% END %],
-                                                                                      ],
-                                                                  popover           => {title => "[% 'Pr&eacute;stamos' | i18n %]",
-                                                                                        text => "[% 'Renovar (si aplica) o devolver ejemplares' | i18n %]" }
-
-                                      ) ;
-                      [% END %]
+				[% IF circularDesdeDetalleUsuario == 1 %]
+		            <div class="form-actions">
+		                      [% PERL %]
+		                              print C4::AR::Filtros::action_set_button(    
+		                                                                  title           => "[% 'Pr&eacute;stamos' | i18n %]",
+		                                                                  button          => 'btn btn-primary',
+		
+		                                                                  actions         => [
+		                                                                                      [% IF prestamos_cant %]{title => "Devolver", action=>'realizarAccion("DEVOLUCION","table_tablaPrestamos",generaDivDevolucion)',icon=>"icon-share-alt"}[% END %],
+		                                                                                      [% IF (algunoSeRenueva > 0) && (vencidos == 0) %]
+		                                                                                          {title => "Renovar", action=>'realizarAccion("RENOVACION","table_tablaPrestamos",generaDivRenovacion)', icon=>"icon-repeat"},
+	                                                                                          [% END %]
+		                                                                                      ],
+		                                                                  popover           => {title => "[% 'Pr&eacute;stamos' | i18n %]",
+		                                                                                        text => "[% 'Renovar (si aplica) o devolver ejemplares' | i18n %]" }
+		
+		                                      ) ;
+		                      [% END %]
+	                </div>
+	            [% END %]
             [% ELSE %]
                 <div class="alert alert-info">[% 'El usuario no tiene ning&uacute;n ejemplar en su poder.'| i18n %]</div>
             [% END %]
