--- a/intranet/htdocs/intranet-tmpl/auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/auth.tmpl
@@ -87,7 +87,7 @@
 	            <div class="control-group">
 	                <label class="control-label" for="username">[% 'Usuario' | i18n %]</label>
 	                <div class="controls">
-	                  <input type="text" class="input-xlarge" id="username" name="username"">
+	                  <input type="text" class="input-xlarge" id="username" name="username" autofocus>
 	                </div>
 	            </div>
 	            <div class="control-group">
