--- a/intranet/htdocs/intranet-tmpl/admin/referencias/detalle_tabla.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/referencias/detalle_tabla.tmpl
@@ -65,9 +65,9 @@
 
 	                             [% PERL %]
                                   print C4::AR::Filtros::action_button( 
-                                                                  button    => "btn btn-danger click",
+                                                                  button    => "btn btn-warning click",
                                                                   action    => 'mostrarReferencias("[% tabla %]", "[% dato.getPkValue %]")', 
-                                                                  icon      => "icon-remove icon-white",
+                                                                  icon      => "icon-move icon-white",
                                                                   title     => "",
                                                               ) ;
 
