--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/modificarCampoMARC.tmpl
@@ -14,7 +14,7 @@
 		   <a href="#" class="close" data-dismiss="modal">×</a>
 	   </div>
        <div class="modal-body">
-	      <form class="form-horizontal">
+	      <form class="form-horizontal" onsubmit="return false">
 			    <div class="control-group">
 			        <label class="control-label" for="tipo_nivel3_id"> [% "Esquema" | i18n %]: </label>
 			        <div class="controls">
