--- a/opac/htdocs/opac-tmpl/opac-MARCdetail.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-MARCdetail.tmpl
@@ -1,47 +1,43 @@
+<div id="tabs" class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">×</a>
+    <h3>[% 'Detalle MARC' | i18n %]</h3>
+</dic>
 
- <script src="/includes/jquery/ui/tabs.min.js" type="text/javascript"></script>
-  <link media="screen" rel="stylesheet" href="/includes/jquery/ui/base/jquery.ui.tabs.css" type="text/css">
-
-<script>
-	$(function() {
-		$( "#tabs" ).tabs();
-	});
-</script>
-
-<div class="detalle_marc">
-
-<div id="tabs" class="ui-tabs ui-widget ui-widget-content ui-corner-all">
-	<ul>
-			<li><a href="#tabs-2">Detalle</a></li>
-		<li><a href="#tabs-1">Marc</a></li>
-	</ul>	
-	<div id="tabs-2">
-		<ul class="MARCResult">
-		[% FOREACH MARCDetail_array %]
-
-			[% IF info_campo_array.size > 0 %]
-				[% IF header %]
-				<li class="MARCHeader">
-					[% campo %]&nbsp;[% header %]
-				</li>
-					[% FOREACH info_campo_array %]
-						[% IF dato.remove('\s+') %]
-							<li class="MARCDetalle">
-								[% subcampo %]&nbsp;[% liblibrarian %]: &nbsp;<b>[% dato %]</b>
-							</li>
-						[% END %]
-					[% END %]
-				[% END %]  
-			[% END %]
-		[% END %]
-		</ul>
-	</div>
-		<div id="tabs-1">
-		<pre>
-			[% detalle_marc %]
-		</pre>
-	</div>
+    [% PERL %]
+        print C4::AR::Filtros::tabbedPane( 
+                                     content   => [ {id => 'detalle', text=> "[% 'Detalls' | i18n %]" },
+                                                    {id => 'marc', text => "[% 'MARC' | i18n %]"},
+                                                  ],
+                                     content_id=> ['detalle_marc_tabs'],
+                                     active_id => 'marc',
+                                     span       => "span5",
+        
+        );
+    
+    [% END %]
+            <div class="tab-pane fade" id="detalle">
+                <ul>
+                [% FOREACH MARCDetail_array %]
+                    [% IF info_campo_array.size > 0 %]
+                        [% IF header %]
+                        <li class="MARCHeader">
+                            [% campo %]&nbsp;[% header %]
+                        </li>
+                            [% FOREACH info_campo_array %]
+                                [% IF dato.remove('\s+') %]
+                                    <li>
+                                        [% subcampo %]&nbsp;[% liblibrarian %]: &nbsp;<b>[% dato %]</b>
+                                    </li>
+                                [% END %]
+                            [% END %]
+                        [% END %]  
+                    [% END %]
+                [% END %]
+                </ul>               
+            </div>
+            <div class="tab-pane fade active in" id="marc">
+              <pre>[% detalle_marc %]</pre>
+            </div>
 
 </div>
 
-</div>
